SDK/CMMISDK_Parameters.h

//Tolerance type
enum CMMISDK_ToleranceType : int32_km
{
	//CM-25cG
	TOLETYPE_SPEC = 0,

	//CM-26dG/CM-26d/CM-25d
	TOLETYPE_SCI = 0,	//SCI
	TOLETYPE_SCE = 1,	//SCE

	//CM-M6
	TOLETYPE_L_ANGLE_M15 = 0,	//LEFT -15
	TOLETYPE_L_ANGLE_15 = 1,	//LEFT 15
	TOLETYPE_L_ANGLE_25 = 2,	//LEFT 25
	TOLETYPE_L_ANGLE_45 = 3,	//LEFT 45
	TOLETYPE_L_ANGLE_75 = 4,	//LEFT 75
	TOLETYPE_L_ANGLE_110 = 5,	//LEFT 110
	TOLETYPE_R_ANGLE_M15 = 6,	//RIGHT -15
	TOLETYPE_R_ANGLE_15 = 7,	//RIGHT 15
	TOLETYPE_R_ANGLE_25 = 8,	//RIGHT 25
	TOLETYPE_R_ANGLE_45 = 9,	//RIGHT 45
	TOLETYPE_R_ANGLE_75 = 10,	//RIGHT 75
	TOLETYPE_R_ANGLE_110 = 11,	//RIGHT 110
	TOLETYPE_DP_ANGLE_M15 = 12,	//DP -15
	TOLETYPE_DP_ANGLE_15 = 13,	//DP 15
	TOLETYPE_DP_ANGLE_25 = 14,	//DP 25
	TOLETYPE_DP_ANGLE_45 = 15,	//DP 45
	TOLETYPE_DP_ANGLE_75 = 16,	//DP 75
	TOLETYPE_DP_ANGLE_110 = 17,	//DP 110
};
//Tolerance id
enum CMMISDK_ToleranceId : int32_km
{
	TOLERANCE_ID_L		       = -1,	//DeltaL*
	TOLERANCE_ID_A		       = -2,	//Deltaa*
	TOLERANCE_ID_B		       = -3,	//Deltab*
	TOLERANCE_ID_C		       = -4,	//DeltaC*
	TOLERANCE_ID_H		       = -5,	//DeltaH*
	TOLERANCE_ID_HL		       = -6,	//DeltaL(Hunter)
	TOLERANCE_ID_HA		       = -7,	//Deltaa(Hunter)
	TOLERANCE_ID_HB		       = -8,	//Deltab(Hunter)
	TOLERANCE_ID_X		       = -9,	//DeltaX
	TOLERANCE_ID_Y		       = -10,	//DeltaY
	TOLERANCE_ID_Z		       = -11,	//DeltaZ
	TOLERANCE_ID_SX		       = -12,	//Deltax
	TOLERANCE_ID_SY		       = -13,	//Deltay
	TOLERANCE_ID_WI_E	       = -14,	//DeltaWI(E313 - 73)
	TOLERANCE_ID_WI_C	       = -15,	//DeltaWI(CIE)
	TOLERANCE_ID_TINT_C	       = -16,	//DeltaTint(CIE)
	TOLERANCE_ID_YI_E	       = -17,	//DeltaYI(E313)
	TOLERANCE_ID_YI_D	       = -18,	//DeltaYI(D1925)
	TOLERANCE_ID_B_ISO	       = -19,	//DeltaB(ISO)
	TOLERANCE_ID_GU		       = -20,	//DeltaGU
	TOLERANCE_ID_MI		       = -21,	//MI
	TOLERANCE_ID_DE		       = -22,	//DeltaE*ab
	TOLERANCE_ID_CMC	       = -23,	//CMC
	TOLERANCE_ID_DE94	       = -24,	//DeltaE * 94
	TOLERANCE_ID_DE00	       = -25,	//DeltaE00
	TOLERANCE_ID_DEH	       = -26,	//DeltaE(Hunter)
	TOLERANCE_ID_DEP_DIN6175   = -27,	//DeltaEp(DIN6175)
	TOLERANCE_ID_DEC_DIN6175   = -28,	//DeltaEc(DIN6175)
	TOLERANCE_ID_FF            = -29,	//DeltaFF
	TOLERANCE_ID_DE99O         = -30,	//DeltaE99o
	TOLERANCE_ID_DEC_AUDI2000  = -31,	//DeltaEc(Audi2000)
	TOLERANCE_ID_MDEC_AUDI2000 = -32,	//DeltaEc average(Audi2000)
	TOLERANCE_ID_DECM_AUDI2000 = -33,	//DeltaEc max.(Audi2000)
	TOLERANCE_ID_DEP_AUDI2000  = -34,	//DeltaEp(Audi2000)
	TOLERANCE_ID_MDEP_AUDI2000 = -35,	//DeltaEp average(Audi2000)
	TOLERANCE_ID_DEPM_AUDI2000 = -36,	//DeltaEp max.(Audi2000)
	TOLERANCE_ID_DSTRENGTH_XYZ = -37,	//DeltaStrengthXYZ
	TOLERANCE_ID_DSTRENGTH_X   = -38,	//DeltastrengthX
	TOLERANCE_ID_DSTRENGTH_Y   = -39,	//DeltastrengthY
	TOLERANCE_ID_DSTRENGTH_Z   = -40,	//DeltastrengthZ
	TOLERANCE_ID_DOPACITY      = -41,	//Delta opacity
	TOLERANCE_ID_DGRAYSCALE    = -42,	//Delta grey scale
	TOLERANCE_ID_WI_G		   = -43,	//Delta WI(Ganz)
	TOLERANCE_ID_TINT_G		   = -44,	//Delta TINT(Ganz)
};
//Parametric coef. id
enum CMMISDK_ParametricId : int32_km
{
	PARAMETRIC_ID_CMC = 0,	//CMC
	PARAMETRIC_ID_DE94,		//DeltaE*94
	PARAMETRIC_ID_DE00,		//DeltaE00
};
//Capability type
enum CMMISDK_CapabilityType : int32_km
{
	CAPTYPE_LIST_SINGLE = 0,	//Single selected
	CAPTYPE_LIST_MULTI,			//Multi selected
	CAPTYPE_VALUE,				//Range value
};
//Date type
enum CMMISDK_DateType : int32_km
{
	DATETYPE_COLOR = 0, //Color
	DATETYPE_GLOSS,		//Gloss
};
//Size definitions
#define SIZE_PORTNAME			32		//Size of port number name
#define SIZE_INSTRUMENT_NAME	32		//Size of instrument name
#define SIZE_DATA				39		//Amount of data
#define SIZE_USERCAL_ID			16		//Size of user ID
#define SIZE_GG					5		//Size of Ganz & Griesser
#define SIZE_GG_PARAM			7		//Parameter size of Ganz & Griesser
#define SIZE_USER_ILLUMINANT	85		//Amount of User illuminant data
#define SIZE_USER_ILL_NAME		16		//User illuminant name
#define SIZE_TARGET				2500	//Amount of target data
#define SIZE_DATE				6		//Size of date/time
#define SIZE_GROUP				5		//Size of active group list
#define SIZE_GROUP_ALL			50		//Total size of groups
#define SIZE_DATANAME			64		//Size of data name
#define SIZE_PARAMETRIC_COEF	3		//Size of parametric coefficient
#define SIZE_USER_EQUATION		200		//Size of user equation syntax
#define SIZE_GROUP_NAME			32		//Size of group name
#define SIZE_ADMIN_PASS			8		//Size of administrator password
#define SIZE_JOB_NAME			32		//Size of job name
#define SIZE_JOB_COMMENT		128		//Size of job comment
//COM port information
struct CMMISDK_Port
{
	char   port_name[SIZE_PORTNAME];	//COM port name
};
//Spectrophotometer information
struct CMMISDK_InstrumentInfo
{
	int32_km     DataSize;								//Reflectance    Size of data (determined by minimum wavelength, maximum wavelength, and wavelength pitch)
	int32_km     WaveLengthStart;						//Reflectance    Wavelength range: Minimum wavelength
	int32_km     WaveLengthEnd;							//Reflectance    Wavelength range: Maximum wavelength
	int32_km     WaveLengthPitch;						//Reflectance    Wavelength range: Wavelength pitch
	int32_km     SerialNo;								//Serial number
	int32_km     VersionMajor;							//Product version (Major)
	int32_km     VersionMinor;							//Product version (Minor)
	int32_km     VersionFree;							//Product version (Free)
	char         InstrumentName[SIZE_INSTRUMENT_NAME];	//Product name
};
//Version information
struct CMMISDK_Version
{
	int32_km     major;	//Major
	int32_km     minor;	//Minor
	int32_km     free;	//Free
};
//Measurement data
struct CMMISDK_Data
{
	float64_km   data[SIZE_DATA];	//Data
};
//Color value calculation conditions
struct CMMISDK_ColorCond
{
	CMMISDK_Observer	obs;			//Observer
	CMMISDK_Illuminant	ill;			//Illuminant
	CMMISDK_ColorSpace	colorSpace;		//Color space
										//	*A value other than COLOR_MUNSELL_C can be specified with CMMISDK_ReadLatestDataColor.
										//	*Only L*a*b*, Hunter Lab, and XYZ can be specified with CMMISDK_SetTargetDataColor and CMMISDK_GetTargetDataColor.
};


//User calibration ID
struct CMMISDK_UserCalId
{
	char   id[SIZE_USERCAL_ID];	//ID
};
//Index data for fluorescence adjustment
struct CMMISDK_UvAdjustIndex
{
	float64_km   value;				//value
	float64_km   tolerance;			//Allowable width
};


//Fluorescence adjustment coefficient
struct CMMISDK_UvAdjustCoef
{
	float64_km   coefficient[SIZE_DATA];	//Fluorescence coefficient
	float64_km   correction[SIZE_DATA];		//Fluorescence correction value
	float64_km   param[SIZE_GG_PARAM];		//Parameter
											//* In the case of Ganz & Griesser only, it is stored in the order of P · Q · C · m · n · k · dWdS
	int32_km     date[SIZE_DATE];			//Adjustment date
											//The array is stored in the order of year, month, day, hour, minute, second
};


//Ganz & Griesser fluorescence adjustment data
struct CMMISDK_UvAdjustGG
{
	int32_km     count;				//Number of samples used
	float64_km   WI[SIZE_GG];		//WI value for the number of samples used
	float64_km   Tint[SIZE_GG];		//Tint value for the number of samples used
};


//Measurement data for Ganz & Griesser
struct CMMISDK_GGData
{
	float64_km   UvFull[SIZE_GG][SIZE_DATA];	//UV full reflectance
	float64_km   UvCut[SIZE_GG][SIZE_DATA];		//UV cut reflectance
};


//SMC conditions
struct CMMISDK_CondSMC
{
	CMMISDK_OnOff			enable;		//Enable or disable function
	float64_km				threshold;	//Threshold value level (0.01 to 9.99)
	int32_km				times;		//Number of times to average (3 to 10 times)
};


//User illuminant data
struct CMMISDK_UserIlluminant
{
	float64_km	data[SIZE_USER_ILLUMINANT];		//User illuminant data
												//	85 items of data between 360 to 780 nm at 5-nm pitch
	char		name[SIZE_USER_ILL_NAME];		//User illuminant name
												//	Name to be displayed on the menu. If the character length is 0, it will be "User".
};
//Saved target list
struct CMMISDK_SavedTargetList
{
	int32_km   size;				//Number of saved targets
	int32_km   list[SIZE_TARGET];	//List of saved numbers
									//	*Stores the target numbers in the amount of the size variable.
};
//Target properties
struct CMMISDK_TargetProperty
{
	int32_km                   date[SIZE_DATE];			//Measurement (registration) date/time
														//	Values are stored in the array in year/month/day/hours/minutes/seconds order.
	int32_km                   group_list[SIZE_GROUP];	//Group number list
	CMMISDK_MeasType           meas_type;				//Measurement method
	CMMISDK_MeasMode           meas_mode;				//Measurement mode
	CMMISDK_MeasArea           meas_area;				//Measurement area
	CMMISDK_MeasAngle          meas_angle;				//Measurement angle
	CMMISDK_LightDirection     meas_ldirection;			//Irradiation direction
	CMMISDK_SpecularComponent  meas_scie;				//Specular component
	CMMISDK_Uv                 meas_uv;					//UV condition
	int32_km                   warning_level;			//Warning level
	CMMISDK_Warning            warning;					//Warning information
														//	0x01	Voltage drop 
														//	0x02	Calibration recommended
														//	0x04	Xe lamp deterioration
														//	0x08	LED lamp deterioration
														//	0x10	Reflectance outside of measurable range
														//	0x20	Gloss outside of measurable range
	int32_km                   diagnosis;				//Diagnosis information
														//	0x01	Repeatability Status: Red
														//	0x02	Repeatability Status: Yellow
														//	0x04	Reproducibility Status: Red
														//	0x08	Reproducibility Status: Yellow
														//	0x10	Intensity Status: Red
														//	0x20	Intensity Status: Yellow
	CMMISDK_DataAttr           data_attr;				//Data attribute
	char                       name[SIZE_DATANAME];		//Data name
														//	*The size is 64 bytes, but the character length depends on the instrument capabilities.
};
//Tolerance data
struct CMMISDK_ToleranceData
{
	int32_km  upper_enable;	//Upper limit enable/disable (0: disable, 1: enable)
	int32_km  upper_value;	//Upper limit (Value multiplied by 100. However, only x・y is a value multiplied by 10000.)
	int32_km  lower_enable;	//Lower limit enable/disable (0: disable, 1: enable)
	int32_km  lower_value;	//Lower limit (Value multiplied by 100. However, only x・y is a value multiplied by 10000.)
};
//Parametric coefficient data
struct CMMISDK_ParametricCoef
{
	float64_km  coef[SIZE_PARAMETRIC_COEF];	//Parametric coefficient
};
//Measurement value properties
struct CMMISDK_SampleProperty
{
	int32_km                   date[SIZE_DATE];		//Measurement (registration) date/time
													//	Values are stored in the array in year/month/day/hours/minutes/seconds order.
	CMMISDK_MeasType           meas_type;			//Measurement method
	CMMISDK_MeasMode           meas_mode;			//Measurement mode
	CMMISDK_MeasArea           meas_area;			//Measurement area
	CMMISDK_MeasAngle          meas_angle;			//Measurement angle
	CMMISDK_LightDirection     meas_ldirection;		//Irradiation direction
	CMMISDK_SpecularComponent  meas_scie;			//Specular component
	CMMISDK_Uv                 meas_uv;				//UV condition
	CMMISDK_Warning            warning;				//Warning information
													//	0x01	Voltage drop 
													//	0x02	Calibration recommended
													//	0x04	Xe lamp deterioration
													//	0x08	LED lamp deterioration
													//	0x10	Reflectance outside of measurable range
													//	0x20	Gloss outside of measurable range
	int32_km                   diagnosis;			//Diagnosis information
													//	0x01	Repeatability Status: Red
													//	0x02	Repeatability Status: Yellow
													//	0x04	Reproducibility Status: Red
													//	0x08	Reproducibility Status: Yellow
													//	0x10	Intensity Status: Red
													//	0x20	Intensity Status: Yellow
	CMMISDK_DataAttr           data_attr;			//Data attribute
	int32_km                   relation_target;		//Related target number
	char                       name[SIZE_DATANAME];	//Data name
													//	*The size is 64 bytes, but the character length depends on the instrument capabilities.
};
//Date and time data
struct CMMISDK_DateTime
{
	int32_km     year;		//Year
	int32_km     month;		//Month
	int32_km     day;		//Day
	int32_km     hour;		//Hour
	int32_km     minute;	//Minute
	int32_km     second;	//Second
};
//User equation information
struct CMMISDK_UserEquation
{
	char   formula[SIZE_USER_EQUATION];		//User equation
	char   user_class[SIZE_USER_EQUATION];	//User classes
};
//Group list
struct CMMISDK_GroupList
{
	int32_km   group[SIZE_GROUP];	//Group list
};
//Group information
struct CMMISDK_Group
{
	char   name[SIZE_GROUP_NAME];	//Name
};
//All group information
struct CMMISDK_GroupAll
{
	char   name[SIZE_GROUP_ALL][SIZE_GROUP_NAME];	//Name
};
//Administrator password
struct CMMISDK_AdminPass
{
	char   password[SIZE_ADMIN_PASS];	//Administrator password
};
//Job information
struct CMMISDK_JobInfo
{
	int32_km		step_count;				//Number of steps to register for job
	CMMISDK_OnOff	step_loop;				//Repeat job on/off
	char			name[SIZE_JOB_NAME];	//Name
};


//Job operation step
struct CMMISDK_JobStepOperation
{
	int32_km					image_num;					//Image number
	CMMISDK_MeasType			meas_type;					//Measurement type
	CMMISDK_MeasMode			meas_mode;					//Measurement mode
	CMMISDK_MeasArea			meas_area;					//Measurement area
	CMMISDK_MeasAngle			meas_angle;					//Measurement angle
	CMMISDK_LightDirection		meas_ldirection;			//Irradiation direction
	CMMISDK_SpecularComponent	meas_scie;					//Specular component
	CMMISDK_Uv					meas_uv;					//UV condition
	int32_km					auto_ave_times;				//Auto average count
	int32_km					manu_ave_times;				//Manual average count
	int32_km					relation_target;			//Related target number
	CMMISDK_OnOff				enable_meas;				//Display measurement button on/off
	CMMISDK_OnOff				enable_prev;				//Display previous button on/off
	CMMISDK_OnOff				enable_next;				//Display next button on/off
	CMMISDK_OnOff				enable_end;					//Display end button on/off
	char						name[SIZE_DATANAME];		//Name
	char						comment[SIZE_JOB_COMMENT];	//Comment
};