SampleApp_25cG_CS_C/SampleApp/SDK/CMMISDK_API.cs


        TOLETYPE_L_ANGLE_M15 = 0,
        TOLETYPE_L_ANGLE_15 = 1,
        TOLETYPE_L_ANGLE_25 = 2,
        TOLETYPE_L_ANGLE_45 = 3,
        TOLETYPE_L_ANGLE_75 = 4,
        TOLETYPE_L_ANGLE_110 = 5,
        TOLETYPE_R_ANGLE_M15 = 6,
        TOLETYPE_R_ANGLE_15 = 7,
        TOLETYPE_R_ANGLE_25 = 8,
        TOLETYPE_R_ANGLE_45 = 9,
        TOLETYPE_R_ANGLE_75 = 10,
        TOLETYPE_R_ANGLE_110 = 11,
        TOLETYPE_DP_ANGLE_M15 = 12,
        TOLETYPE_DP_ANGLE_15 = 13,
        TOLETYPE_DP_ANGLE_25 = 14,
        TOLETYPE_DP_ANGLE_45 = 15,
        TOLETYPE_DP_ANGLE_75 = 16,
        TOLETYPE_DP_ANGLE_110 = 17,
    }
    public enum _CMMISDK_ToleranceId
    {
        TOLERANCE_ID_L = -1,
        TOLERANCE_ID_A = -2,
        TOLERANCE_ID_B = -3,
        TOLERANCE_ID_C = -4,
        TOLERANCE_ID_H = -5,
        TOLERANCE_ID_HL = -6,
        TOLERANCE_ID_HA = -7,
        TOLERANCE_ID_HB = -8,
        TOLERANCE_ID_X = -9,
        TOLERANCE_ID_Y = -10,
        TOLERANCE_ID_Z = -11,
        TOLERANCE_ID_SX = -12,
        TOLERANCE_ID_SY = -13,
        TOLERANCE_ID_WI_E = -14,
        TOLERANCE_ID_WI_C = -15,
        TOLERANCE_ID_TINT_C = -16,
        TOLERANCE_ID_YI_E = -17,
        TOLERANCE_ID_YI_D = -18,
        TOLERANCE_ID_B_ISO = -19,
        TOLERANCE_ID_GU = -20,
        TOLERANCE_ID_MI = -21,
        TOLERANCE_ID_DE = -22,
        TOLERANCE_ID_CMC = -23,
        TOLERANCE_ID_DE94 = -24,
        TOLERANCE_ID_DE00 = -25,
        TOLERANCE_ID_DEH = -26,
        TOLERANCE_ID_DEP_DIN6175 = -27,
        TOLERANCE_ID_DEC_DIN6175 = -28,
        TOLERANCE_ID_FF = -29,
        TOLERANCE_ID_DE99O = -30,
        TOLERANCE_ID_DEC_AUDI2000 = -31,
        TOLERANCE_ID_MDEC_AUDI2000 = -32,
        TOLERANCE_ID_DECM_AUDI2000 = -33,
        TOLERANCE_ID_DEP_AUDI2000 = -34,
        TOLERANCE_ID_MDEP_AUDI2000 = -35,
        TOLERANCE_ID_DEPM_AUDI2000 = -36,
        TOLERANCE_ID_DSTRENGTH_XYZ = -37,
        TOLERANCE_ID_DSTRENGTH_X = -38,
        TOLERANCE_ID_DSTRENGTH_Y = -39,
        TOLERANCE_ID_DSTRENGTH_Z = -40,
        TOLERANCE_ID_DOPACITY = -41,
        TOLERANCE_ID_DGRAYSCALE = -42,
		TOLERANCE_ID_WI_G = -43,	
		TOLERANCE_ID_TINT_G = -44,
    }
    public enum _CMMISDK_ParametricId
    {
        PARAMETRIC_ID_CMC = 0,
        PARAMETRIC_ID_DE94,
        PARAMETRIC_ID_DE00,
    }
	public enum _CMMISDK_CapabilityType
    {
		CAPTYPE_LIST_SINGLE = 0,	
		CAPTYPE_LIST_MULTI,			
		CAPTYPE_VALUE,
    }
    public enum _CMMISDK_DateType
    {
        DATETYPE_COLOR = 0,
        DATETYPE_GLOSS,
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_Port
    {
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_PORTNAME)]
        public byte[] port_name;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_InstrumentInfo
    {
        public Int32 DataSize;
        public Int32 WaveLengthStart;
        public Int32 WaveLengthEnd;
        public Int32 WaveLengthPitch;
        public Int32 SerialNo;
        public Int32 VersionMajor;
        public Int32 VersionMinor;
        public Int32 VersionFree;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_INSTRUMENT_NAME)]
        public byte[] InstrumentName;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_Version
    {
        public Int32 major;
        public Int32 minor;
        public Int32 free;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_Data
    {
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_DATA)]
        public double[] data;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_ColorCond
    {
        public CMMISDK_Observer obs;
        public CMMISDK_Illuminant ill;
        public CMMISDK_ColorSpace colorSpace;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_UserCalId
    {
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_USERCAL_ID)]
        public byte[] id;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
	public struct CMMISDK_UvAdjustIndex
    {
		public double value;
		public double tolerance;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_UvAdjustCoef
    {
        [MarshalAs(UnmanagedType.ByValArray, SizeConst=Define.SIZE_DATA)]
        public double[] coefficient;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst=Define.SIZE_DATA)]
        public double[] correction;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst=Define.SIZE_GG_PARAM)]
        public double[] param;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst=Define.SIZE_DATE)]
		public Int32[] date;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_UvAdjustGG
    {
        public Int32 count;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst=Define.SIZE_GG)]
        public double[] WI;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst=Define.SIZE_GG)]
        public double[] Tint;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_GGData
    {
        [MarshalAs(UnmanagedType.ByValArray, SizeConst=Define.SIZE_GG*Define.SIZE_DATA)]
        public double[] UvFull;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst=Define.SIZE_GG*Define.SIZE_DATA)]
        public double[] UvCut;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_CondSMC
    {
        public CMMISDK_OnOff enable;
        public double threshold;
        public Int32 times;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_UserIlluminant
    {
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_USER_ILLUMINANT)]
        public double[] data;
		[MarshalAs(UnmanagedType.ByValArray, SizeConst=Define.SIZE_USER_ILL_NAME)]
		public byte[] name;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_SavedTargetList
    {
        public Int32 size;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_TARGET)]
        public Int32[] list;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_TargetProperty
    {
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_DATE)]
        public Int32[] date;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_GROUP)]
        public Int32[] group_list;
        public CMMISDK_MeasType meas_type;
        public CMMISDK_MeasMode meas_mode;
        public CMMISDK_MeasArea meas_area;
        public CMMISDK_MeasAngle meas_angle;
        public CMMISDK_LightDirection meas_ldirection;
        public CMMISDK_SpecularComponent meas_scie;
        public CMMISDK_Uv meas_uv;
        public Int32 warning_level;
        public CMMISDK_Warning warning;
        public Int32 diagnosis;
        public CMMISDK_DataAttr data_attr;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_DATANAME)]
        public byte[] name;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_ToleranceData
    {
        public Int32 upper_enable;
        public Int32 upper_value;
        public Int32 lower_enable;
        public Int32 lower_value;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_ParametricCoef
    {
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_PARAMETRIC_COEF)]
        public double[] coef;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_SampleProperty
    {
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_DATE)]
        public Int32[] date;
        public CMMISDK_MeasType meas_type;
        public CMMISDK_MeasMode meas_mode;
        public CMMISDK_MeasArea meas_area;
        public CMMISDK_MeasAngle meas_angle;
        public CMMISDK_LightDirection meas_ldirection;
        public CMMISDK_SpecularComponent meas_scie;
        public CMMISDK_Uv meas_uv;
        public CMMISDK_Warning warning;
        public Int32 diagnosis;
        public CMMISDK_DataAttr data_attr;
        public Int32 relation_target;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_DATANAME)]
        public byte[] name;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_DateTime
    {
        public Int32 year;
        public Int32 month;
        public Int32 day;
        public Int32 hour;
        public Int32 minute;
        public Int32 second;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_UserEquation
    {
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_USER_EQUATION)]
        public byte[] formula;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_USER_EQUATION)]
        public byte[] user_class;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_GroupList
    {
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_GROUP)]
        public Int32[] group;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_Group
    {
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_GROUP_NAME)]
        public byte[] name;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_GroupAll
    {
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_GROUP_ALL * Define.SIZE_GROUP_NAME)]
        public byte[] name;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_AdminPass
    {
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_ADMIN_PASS)]
        public byte[] password;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_JobInfo
    {
        public Int32 step_count;
        public CMMISDK_OnOff step_loop;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_JOB_NAME)]
        public byte[] name;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_JobStepOperation
    {
        public Int32 image_num;
        public CMMISDK_MeasType meas_type;
        public CMMISDK_MeasMode meas_mode;
        public CMMISDK_MeasArea meas_area;
        public CMMISDK_MeasAngle meas_angle;
        public CMMISDK_LightDirection meas_ldirection;
        public CMMISDK_SpecularComponent meas_scie;
        public CMMISDK_Uv meas_uv;
        public Int32 auto_ave_times;
        public Int32 manu_ave_times;
        public Int32 relation_target;
        public CMMISDK_OnOff enable_meas;
        public CMMISDK_OnOff enable_prev;
        public CMMISDK_OnOff enable_next;
        public CMMISDK_OnOff enable_end;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_DATANAME)]
        public byte[] name;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_JOB_COMMENT)]
        public byte[] comment;
    }
